unpackaged/main/default/objects/ERS_Case_FSL_Priority_Mapping__mdt/ERS_Case_FSL_Priority_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Utilized to determine scheduling policy</description>
    <label>ERS Case FSL Priority Mapping</label>
    <pluralLabel>ERS Case FSL Priority Mappings</pluralLabel>
</CustomObject>