unpackaged/main/default/objects/ERS_Case_FSL_Priority_Mapping__mdt/fields/Priority_Description__c.field-meta.xml
<CustomField>
    <fullName>Priority_Description__c</fullName>
    <label>Priority Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>