unpackaged/main/default/objects/ERS_Case_FSL_Priority_Mapping__mdt/fields/Scheduling_Policy__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Policy__c</fullName>
    <label>Scheduling Policy</label>
    <length>50</length>
    <type>Text</type>
</CustomField>