unpackaged/main/default/objects/ERS_Case_FSL_Priority_Mapping__mdt/fields/Work_Order_Priority__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Priority__c</fullName>
    <label>Work Order Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
                <default>true</default>
                <label>Medium</label>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>