unpackaged/main/default/objects/ERS_Case_FSL_Priority_Mapping__mdt/fields/Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Type__c</fullName>
    <label>Work Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>